# mjpeg

./: .gitignore  Directory.Build.props  ModelingEvolution.Mjpeg.sln  NuGet.config  README.md  release.sh  testEnvironments.json
.github/workflows/: ci.yml  publish-cli.yml  publish-nuget.yml
src/Demo.Client/: Demo.Client.csproj  _Imports.razor
src/Demo.Player/: App.razor  Demo.Player.csproj  Program.cs  _Imports.razor
src/Demo.Player/Pages/: Index.razor
src/Demo.Server/: Demo.Server.csproj  Program.cs
src/LibJpegWrap/: CMakeLists.txt  LibJpegWrap.cpp  vcpkg.json
src/ModelingEvolution.Mjpeg.Benchmarks/: HdrBlendBenchmarks.cs  JpegDecodeBenchmarks.cs  ModelingEvolution.Mjpeg.Benchmarks.csproj  Program.cs
src/ModelingEvolution.Mjpeg.Cli/: MjpegScanner.cs  ModelingEvolution.Mjpeg.Cli.csproj  NuGet.config  Program.cs  README.md  Types.cs
src/ModelingEvolution.Mjpeg.Tests/: FrameHeaderTests.cs  HdrBlendTests.cs  HdrBlendingVisualTest.cs  HdrWeightsTests.cs  HttpFrameGrabberTests.cs  JpegCodecTests.cs  JpegDimensionExtractorTests.cs  MjpegDecoderTests.cs  MjpegFrameScannerTests.cs  MjpegHdrEngineIntegrationTests.cs  MjpegHdrEngineTests.cs  MjpegProviderTests.cs  ModelingEvolution.Mjpeg.Tests.csproj
src/ModelingEvolution.Mjpeg.Wasm.TestApp/: ModelingEvolution.Mjpeg.Wasm.TestApp.csproj  Program.cs  _Imports.razor
src/ModelingEvolution.Mjpeg.Wasm.TestApp.Server/: ModelingEvolution.Mjpeg.Wasm.TestApp.Server.csproj  Program.cs
src/ModelingEvolution.Mjpeg.Wasm.Tests/: FakeNativeDecoder.cs  ModelingEvolution.Mjpeg.Wasm.Tests.csproj  WasmJpegDecodePipelineTests.cs
(+44 files in other folders)
